--- a/ByJoshgunFinalRestaurantProject/ByJoshgunFinalRestaurantProject/Views/Users/ResetPassword.cshtml
+++ b/ByJoshgunFinalRestaurantProject/ByJoshgunFinalRestaurantProject/Views/Users/ResetPassword.cshtml
@@ -4,51 +4,31 @@
 }
 
 
-<!-- Main content -->
-<section class="content">
-    <div class="container-fluid">
-        <div class="row">
-            @*left column*@
-            <div class="col-md-12">
-                @*general form elements*@
-                <div class="card card-primary">
-
-                    @*/.card-header
-                        form start*@
-                    <form method="post" enctype="multipart/form-data">
-                        <div class="card-body">
-                            <div class="form-group" asp-validation-summary="ModelOnly">
-                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                <label asp-for="@Model.Email">Email</label>
-                                <input asp-for="@Model.Email" class="form-control" placeholder="Email">
-                                <span class="text-danger" asp-validation-for="@Model.Email"></span>
-                            </div>
-                            <div class="form-Room">
-                                <label asp-for="@Model.Password">Yeni Şifrə</label>
-                                <input asp-for="@Model.Password" class="form-control" placeholder="Şifrə">
-                                <span class="text-danger" asp-validation-for="@Model.Password"></span>
-                            </div>
-                            <div class="form-Room">
-                                <label asp-for="@Model.CheckPassword">Şifrə Təsdiqi</label>
-                                <input asp-for="@Model.CheckPassword" class="form-control" placeholder="Şifrə Təsdiqi">
-                                <span class="text-danger" asp-validation-for="@Model.CheckPassword"></span>
-                            </div>
-                            
-
-                        </div>
-                        @*/.card-body*@
-
-                        <div class="card-footer">
-                            <button type="submit" class="btn btn-success">Dəyişdir</button>
-                            <a asp-action="Index" class="btn btn-primary">Geri qayıt</a>
-                        </div>
-                    </form>
-                </div>
-                @*//.card*@
-            </div>
-        </div>
+<form method="post" enctype="multipart/form-data">
+    <div class="form-group" asp-validation-summary="ModelOnly">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <label asp-for="@Model.Email">Email</label>
+        <input style="color:honeydew" asp-for="@Model.Email" class="form-control" placeholder="Email">
+        <span class="text-danger" asp-validation-for="@Model.Email"></span>
     </div>
-</section>
+    <div class="form-group">
+        <label asp-for="@Model.Password">Yeni Şifrə</label>
+        <input style="color:honeydew" asp-for="@Model.Password" class="form-control" placeholder="Yeni Şifrə">
+        <span class="text-danger" asp-validation-for="@Model.Password"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="@Model.CheckPassword">Şifrə Təsdiqi</label>
+        <input style="color:honeydew" asp-for="@Model.CheckPassword" class="form-control" placeholder="Şifrə Təsdiqi">
+        <span class="text-danger" asp-validation-for="@Model.CheckPassword"></span>
+    </div>
+    <button type="submit" class="btn btn-outline-success">Dəyişdir</button>
+    <a asp-action="Index" class="btn btn-outline-primary">Geri</a>
+</form>
+
+@section Scripts{
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
+}
 
 
 
@@ -58,8 +38,7 @@
 
 
 
-
-@*<!-- Reset start -->
+    @*<!-- Reset start -->
 <div class="register-area pt-150 pb-150">
     <div class="container">
         <div class="row">
@@ -107,7 +86,7 @@
 
 
 
-                                  
+
 
 
 
